unpackaged/main/default/objects/AssignedResource/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assigned_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>