unpackaged/main/default/objects/AssignedResource/fields/Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Resource_Name__c</fullName>
    <label>Resource Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>