unpackaged/main/default/objects/AssignedResource/fields/SA_Department__c.field-meta.xml
<CustomField>
    <fullName>SA_Department__c</fullName>
    <formula>TEXT(ServiceResource.SA_Department__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SA Department</label>
    <type>Text</type>
</CustomField>