unpackaged/main/default/objects/AssignedResource/fields/SA_Sub_Group__c.field-meta.xml
<CustomField>
    <fullName>SA_Sub_Group__c</fullName>
    <formula>TEXT(ServiceResource.SA_Sub_Group__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SA Sub Group</label>
    <type>Text</type>
</CustomField>